check jsp; deploy to server

--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,18 +1,17 @@
-#锟斤拷锟斤拷锟矫ｏ拷锟斤拷锟斤拷mybatis锟斤拷锟津工程ｏ拷锟皆讹拷锟斤拷锟斤拷锟斤拷锟斤拷锟侥硷拷
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/account?characterEncoding=utf-8
 username=root
 password=mysql
 
-#mybatis路锟斤拷
+#mybatis
 mybatisPath=C:/Users/Kevin/.m2/repository/mysql/mysql-connector-java/5.1.38/mysql-connector-java-5.1.38.jar
-#pojo 锟斤拷锟斤拷锟斤拷 java目录
+#
 modelPackage=com.mvc.pojo
 modelProject=src/main/java
-#sqlmap锟斤拷锟斤拷 锟斤拷resources目录
+#sqlmap
 sqlPackage=sql
 sqlProject=src/main/resources
-#mapper锟斤拷锟斤拷锟斤拷 java目录
+#mapper包所在目录，源所在根目录
 mapperPackage=com.mvc.dao
 mapperProject=src/main/java
 
