--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #定义LOG输出级别
-log4j.rootLogger=DEBUG ,Console,File
+log4j.rootLogger=ERROR ,Console,File
 #定义日志输出目的地为控制台
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.Target=System.out
@@ -12,7 +12,7 @@ log4j.appender.Console.layout.ConversionPattern=[%p] [%d{yyyy-MM-dd HH\:mm\:ss}]
 log4j.appender.File = org.apache.log4j.RollingFileAppender
 log4j.appender.File.Encoding = UTF-8
 #指定输出目录
-log4j.appender.File.File = F:/Java Bian Chen/log/log.log
+log4j.appender.File.File = /var/log/webserver.log
 #定义文件最大大小
 log4j.appender.File.MaxFileSize = 10MB
 #输出所有日志，如果换成DEBUG表示输出DEBUG以上级别日志
